--- a/resume.tex
+++ b/resume.tex
@@ -75,8 +75,8 @@
   \href{https://www.linkedin.com/in/rohit-patil-493220205/}{https://www.linkedin.com/in/rohit-patil-493220205/} & Mobile: +91 6303548503 \\
 \end{tabular*}
 
-%-----------Job Description-----------------
-\section{Job Description}
+%-----------Summary-----------------
+\section{Summary}
 \noindent
 Results-driven Software Developer with expertise in Python, Java, C++, and Salesforce. Skilled in full-stack development, AI, and cloud-based applications. Proven ability to deliver scalable solutions and streamline processes. Passionate about continuous learning and innovation.
 
